del extra in container

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,114 +1,142 @@
 <section class="contacts-section section">
-    <div class="contacts-container container">
-        <h2 class="contacts-section__title never">contacts</h2>
-        <ul class="contacts-section__list__container">
-        <li class="contacts-section__item__container">
+  <div class="contacts-container container">
+    <h2 class="contacts-section__title never">contacts</h2>
+    <ul class="contacts-section__list__container">
+      <li class="contacts-section__item__container">
         <ul class="contacts-section__list">
-            <li class="contacts-section__item">
-                <p class="contacts-section__text">CAFE</p>
-                <ul class="contacts-section__list__location">
-                    <li class="contacts-section__item__location">New York</li>
-                    <li class="contacts-section__item__about">Fusce ut velit laoreet, tempus arcu molestie vulputate
-                    </li>
-                </ul>
-            </li>
-            <li class="contacts-section__item">
-                <ul class="contacts-section__list__time">
-                    <li class="contacts-section__item__day">Monday - Friday</li>
-                    <li class="contacts-section__item__time">06:00 AM - 10:00 PM</li>
-                    <li class="contacts-section__item__day">Saturday - Sunday</li>
-                    <li class="contacts-section__item__time">08:00 AM - 16:00 PM</li>
-                </ul>
-            </li>
-            <li class="contacts-section__item">
-                <ul class="contacts-section__list__contacts">
-                    <li class="contacts-section__item__contacts__tel">
-                        <a class="contacts-section__link__contacts link" href="tel:+610383766284">
-                            +61(0) 383 766 284</a>
-                    </li>
-                    <li class="contacts-section__item__contacts__post">
-                        <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
-                            noreply@envato.com
-                        </a>
-                    </li>
-                </ul>
-            </li>
+          <li class="contacts-section__item">
+            <p class="contacts-section__text">CAFE</p>
+            <ul class="contacts-section__list__location">
+              <li class="contacts-section__item__location">New York</li>
+              <li class="contacts-section__item__about">
+                Fusce ut velit laoreet, tempus arcu molestie vulputate
+              </li>
+            </ul>
+          </li>
+          <li class="contacts-section__item">
+            <ul class="contacts-section__list__time">
+              <li class="contacts-section__item__day">Monday - Friday</li>
+              <li class="contacts-section__item__time">06:00 AM - 10:00 PM</li>
+              <li class="contacts-section__item__day">Saturday - Sunday</li>
+              <li class="contacts-section__item__time">08:00 AM - 16:00 PM</li>
+            </ul>
+          </li>
+          <li class="contacts-section__item">
+            <ul class="contacts-section__list__contacts">
+              <li class="contacts-section__item__contacts__tel">
+                <a
+                  class="contacts-section__link__contacts link"
+                  href="tel:+610383766284"
+                >
+                  +61(0) 383 766 284</a
+                >
+              </li>
+              <li class="contacts-section__item__contacts__post">
+                <a
+                  class="contacts-section__link__contacts link"
+                  href="malito:noreply@envato.com"
+                >
+                  noreply@envato.com
+                </a>
+              </li>
+            </ul>
+          </li>
         </ul>
-        </li>
-        <li class="contacts-section__item__container">
+      </li>
+      <li class="contacts-section__item__container">
         <ul class="contacts-section__list">
-            <li class="contacts-section__item">
-                <p class="contacts-section__text food">FOODTRUCK</p>
-                <ul class="contacts-section__list__location">
-                    <li class="contacts-section__item__location">Los Angeles</li>
-                    <li class="contacts-section__item__about">Fusce ut velit laoreet, tempus arcu molestie vulputate
-                    </li>
-                </ul>
-            </li>
-            <li class="contacts-section__item">
-                <ul class="contacts-section__list__time">
-                    <li class="contacts-section__item__day">Monday - Friday</li>
-                    <li class="contacts-section__item__time">06:00 AM - 10:00 PM</li>
-                    <li class="contacts-section__item__day">Saturday - Sunday</li>
-                    <li class="contacts-section__item__time">08:00 AM - 16:00 PM</li>
-                </ul>
-            </li>
-            <li class="contacts-section__item">
-                <ul class="contacts-section__list__contacts">
-                    <li class="contacts-section__item__contacts__tel">
-                        <a class="contacts-section__link__contacts link" href="tel:+610383766284">
-                            +61(0) 383 766 284</a>
-                    </li>
-                    <li class="contacts-section__item__contacts__post">
-                        <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
-                            noreply@envato.com
-                        </a>
-                    </li>
-                </ul>
-            </li>
+          <li class="contacts-section__item">
+            <p class="contacts-section__text food">FOODTRUCK</p>
+            <ul class="contacts-section__list__location">
+              <li class="contacts-section__item__location">Los Angeles</li>
+              <li class="contacts-section__item__about">
+                Fusce ut velit laoreet, tempus arcu molestie vulputate
+              </li>
+            </ul>
+          </li>
+          <li class="contacts-section__item">
+            <ul class="contacts-section__list__time">
+              <li class="contacts-section__item__day">Monday - Friday</li>
+              <li class="contacts-section__item__time">06:00 AM - 10:00 PM</li>
+              <li class="contacts-section__item__day">Saturday - Sunday</li>
+              <li class="contacts-section__item__time">08:00 AM - 16:00 PM</li>
+            </ul>
+          </li>
+          <li class="contacts-section__item">
+            <ul class="contacts-section__list__contacts">
+              <li class="contacts-section__item__contacts__tel">
+                <a
+                  class="contacts-section__link__contacts link"
+                  href="tel:+610383766284"
+                >
+                  +61(0) 383 766 284</a
+                >
+              </li>
+              <li class="contacts-section__item__contacts__post">
+                <a
+                  class="contacts-section__link__contacts link"
+                  href="malito:noreply@envato.com"
+                >
+                  noreply@envato.com
+                </a>
+              </li>
+            </ul>
+          </li>
         </ul>
-        </li>
-        <li class="contacts-section__item__container">
+      </li>
+      <li class="contacts-section__item__container">
         <ul class="contacts-section__list">
-            <li class="contacts-section__item">
-                <p class="contacts-section__text">CAFE</p>
-                <ul class="contacts-section__list__location">
-                    <li class="contacts-section__item__location">New York</li>
-                    <li class="contacts-section__item__about">Fusce ut velit laoreet, tempus arcu molestie vulputate
-                    </li>
-                </ul>
-            </li>
-            <li class="contacts-section__item">
-                <ul class="contacts-section__list__time">
-                    <li class="contacts-section__item__day">Monday - Friday</li>
-                    <li class="contacts-section__item__time">06:00 AM - 10:00 PM</li>
-                    <li class="contacts-section__item__day">Saturday - Sunday</li>
-                    <li class="contacts-section__item__time">08:00 AM - 16:00 PM</li>
-                </ul>
-            </li>
-            <li class="contacts-section__item">
-                <ul class="contacts-section__list__contacts">
-                    <li class="contacts-section__item__contacts__tel">
-                        <a class="contacts-section__link__contacts link" href="tel:+610383766284">
-                            +61(0) 383 766 284</a>
-                    </li>
-                    <li class="contacts-section__item__contacts__post">
-                        <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
-                            noreply@envato.com
-                        </a>
-                    </li>
-                </ul>
-            </li>
+          <li class="contacts-section__item">
+            <p class="contacts-section__text">CAFE</p>
+            <ul class="contacts-section__list__location">
+              <li class="contacts-section__item__location">New York</li>
+              <li class="contacts-section__item__about">
+                Fusce ut velit laoreet, tempus arcu molestie vulputate
+              </li>
+            </ul>
+          </li>
+          <li class="contacts-section__item">
+            <ul class="contacts-section__list__time">
+              <li class="contacts-section__item__day">Monday - Friday</li>
+              <li class="contacts-section__item__time">06:00 AM - 10:00 PM</li>
+              <li class="contacts-section__item__day">Saturday - Sunday</li>
+              <li class="contacts-section__item__time">08:00 AM - 16:00 PM</li>
+            </ul>
+          </li>
+          <li class="contacts-section__item">
+            <ul class="contacts-section__list__contacts">
+              <li class="contacts-section__item__contacts__tel">
+                <a
+                  class="contacts-section__link__contacts link"
+                  href="tel:+610383766284"
+                >
+                  +61(0) 383 766 284</a
+                >
+              </li>
+              <li class="contacts-section__item__contacts__post">
+                <a
+                  class="contacts-section__link__contacts link"
+                  href="malito:noreply@envato.com"
+                >
+                  noreply@envato.com
+                </a>
+              </li>
+            </ul>
+          </li>
         </ul>
-        </li>
-        </ul>
-        <ul class="contacts-section__list__button">
-            <li class="contacts-section__item__button__location">
-                <button class="contacts-section__button__location" type="button">Our Locations</button>
-            </li>
-            <li class="contacts-section__item__button__franchise">
-                <button class="contacts-section__button__franchise" type="button">Franchise</button>
-            </li>
-        </ul> 
-    </div>
+      </li>
+    </ul>
+    <ul class="contacts-section__list__button">
+      <li class="contacts-section__item__button__location">
+        <button class="contacts-section__button__location" type="button">
+          Our Locations
+        </button>
+      </li>
+      <li class="contacts-section__item__button__franchise">
+        <button class="contacts-section__button__franchise" type="button">
+          Franchise
+        </button>
+      </li>
+    </ul>
+  </div>
 </section>
