finished  icons and line

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  padding-top: 40px;
   padding-bottom: 3px;
   background-color: $primary-background-color;
 }
@@ -108,11 +107,12 @@
   height: 32px;
   border-radius: 50%;
   cursor: pointer;
-  background-color: $icon-color;
+  transition: background-color $white-color;
+  background-color: $white-color;
 
   &:hover,
   &:focus {
-    background-color: #d41443;
+    background-color: $title-text-color;
   }
 
   @media screen and (min-width: 768px) {
@@ -121,9 +121,13 @@
 }
 
 .footer__icons-picture {
-  fill: $white-color;
+  fill: $icon-color;
   justify-content: center;
   align-items: center;
+  &:hover,
+  &:focus {
+    fill: $title-text-color;
+  }
 }
 
 .footer__contacts {
@@ -155,13 +159,21 @@
 }
 
 .footer__sign {
-  border-top: 1px solid $complementary-color;
+  padding: 0;
   padding-top: 16px;
-  padding-left: 0;
-  padding-right: 0;
+
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: center;
+  }
+
+  @media screen and (max-width: 1200px) {
+    border-top: 1px solid $complementary-color;
+  }
+  @media screen and (min-width: 1200px) {
+    border-top: 1px solid $complementary-color;
+    margin-right: 15px;
+    margin-left: 15px;
   }
 }
 
