--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -51,7 +51,7 @@
   </div>
 </section>
 
-<!-- <div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden" data-modal>
   <div class="modal">
     <button data-modal-close class="close-button" type="button">
       <svg
@@ -67,7 +67,17 @@
       </svg>
     </button>
     <form class="form">
-      <span class="form-text">A lot of interesting things about as</span>
+      <span class="form__text">A lot of interesting things about as</span>
+      <span class="form__subtitle"
+        >Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+        cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+        justo fringilla.<br />
+        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+        Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+        suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+        tincidunt.<br />Aliquam erat volutpat. Aenean accumsan.</span
+      >
+      <img
     </form>
   </div>
-</div> -->
+</div>
