--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,27 +6,38 @@
             </a>
 
             <button class="header-hero__btn-menu" type="button" aria-expanded="false" data-menu-button>
-                <svg class="header-hero__icon-burger" width="20" height="12" aria-label="мобильное меню">
+                <svg class="header-hero__icon-burger" width="20" height="12">
                     <use class="icon-burger" href="/src/images/icons/symbol-defs.svg#icon-burger"></use>
                 </svg>
                 <svg class="header-hero__icon-close" width="14" height="14">
                     <use class="icon-close" href="/src/images/icons/symbol-defs.svg#icon-close"></use>
-                </svg>
-                
+                </svg> 
             </button>
 
             <div class="header-hero__menu" data-menu>
+
+                <button type="button" class="header-hero__btn btn-mobail">Buy now
+                    <svg class="header-hero__btn-svg" width="4" height="8">
+                        <use href="/src/images/icons/arrow2.svg"></use>
+                    </svg>
+                </button>
+
                 <ul class="header-hero__list">
-                    <li class="header-hero__item"><a href="#home" class="header-hero__link header-hero--red">Home</a></li>
+                    <li class="header-hero__item"><a href="#home" class="header-hero__link header-hero__link--red">Home</a></li>
                     <li class="header-hero__item"><a href="#about" class="header-hero__link">About us</a></li>
                     <li class="header-hero__item"><a href="#it’s made" class="header-hero__link">How it’s made?</a></li>
                     <li class="header-hero__item"><a href="#products" class="header-hero__link">Our products</a></li>
                     <li class="header-hero__item"><a href="#contacts" class="header-hero__link">Contact</a></li>
                 </ul>
 
-                
             </div>
-            <button type="button" class="header-hero__btn">Buy now</button>
+
+            <button type="button" class="header-hero__btn btn-desctop">Buy now
+                <svg class="header-hero__btn-svg" width="4" height="8">
+                    <use href="/src/images/icons/arrow2.svg"></use>
+                </svg>
+            </button>
+
         </nav>
     </div>
 
