add hero chapter in header

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,25 +1,60 @@
+.header-hero-container {
+    padding-bottom: 56px;
+    max-width: 1200px;
+
+    background-color: $products1-background-color;
+    background-image: radial-gradient(circle,
+            $text-decoration-color 172px,
+            transparent 172px);
+    background-position: top 0 left 35px;
+    background-repeat: no-repeat;
+    background-size: 346px;
+
+    @include mq(tablet) {
+        background-image: radial-gradient(circle,
+                $text-decoration-color 180px,
+                transparent 180px);
+        background-position: top 0px left 240px;
+        background-size: 360px;
+    }
+
+    @include mq(desktop) {
+        padding-bottom: 85px;
+        background-image: radial-gradient(circle,
+                $text-decoration-color 270px,
+                transparent 270px);
+        background-position: top -10px left 500px;
+        background-size: 535px;
+    }
+}
+
 .header-hero__section {
     position: relative;
     display: flex;
-    background-color: #FFB8CA;
+    margin-bottom: 130px;
+
     @media screen and (min-width: 768px) {
+        margin-bottom: 20px;
         width: 704px;
         padding-top: 32px;
     }
 
-    @media screen and (min-width: 1200px){
-    padding-top: 0px;
-    width: 100%;
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 60px;
+        padding-top: 0px;
+        width: 100%;
     }
 }
 
 .header-hero__logo {
     padding-top: 8px;
+
     @media screen and (min-width: 768px) {
-    padding-top: 0px;   
+        padding-top: 0px;
     }
+
     @media screen and (min-width: 1200px) {
-    padding-top: 37px;
+        padding-top: 37px;
     }
 }
 
@@ -31,10 +66,10 @@
     right: 0px;
     background-color: transparent;
     border: none;
-    @media screen and (min-width: 768px)
-    and (max-width: 1199px) {
-    top: 46px;
-    right: 184px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        top: 46px;
+        right: 184px;
     }
 
     @media screen and (min-width: 1200px) {
@@ -63,14 +98,14 @@
     display: flex;
 
     @media screen and (max-width: 1199px) {
-            display: none;
-        }
+        display: none;
+    }
 
 
     @media screen and (min-width: 1200px) {
-    margin-left: 128px;
-    margin-bottom: 0px;
-    
+        margin-left: 128px;
+        margin-bottom: 0px;
+
     }
 
 }
@@ -114,7 +149,7 @@
     padding: 0px;
     border: none;
     border-radius: 22px;
-    
+
     fill: $title-text-color;
 
     @media screen and (max-width: 767px) {
@@ -133,3 +168,272 @@
 }
 
 
+//! Секція HERO
+
+.hero {
+    position: relative;
+    text-align: left;
+    font-size: 8px;
+
+    @include mq(desktop) {
+        font-size: 14px;
+    }
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 61px;
+
+    @include mq(mobile) {
+        position: relative;
+        z-index: 1;
+
+        margin-bottom: 102px;
+    }
+
+    @include mq(desktop) {
+        margin-bottom: 108px;
+    }
+}
+
+.page-title {
+    // max-width: 280px;
+    font-family: 'Titan One';
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 1.15;
+    text-transform: uppercase;
+    color: $white-color;
+    margin-bottom: 20px;
+
+    @include mq(mobile) {
+        max-width: 220px;
+    }
+
+    @include mq(tablet) {
+        max-width: 165px;
+        font-size: 22px;
+        line-height: 1.13;
+    }
+
+    @include mq(desktop) {
+        max-width: 280px;
+        font-size: 38px;
+        line-height: 1.15;
+        letter-spacing: 0.04em;
+        margin-bottom: 24px;
+    }
+}
+
+.page-title--big-red {
+    font-size: 48px;
+    line-height: 0.96;
+    text-transform: uppercase;
+    color: $title-text-color;
+
+
+    @include mq(tablet) {
+        font-size: 34px;
+        line-height: 1.09;
+    }
+
+    @include mq(desktop) {
+        font-size: 58px;
+        line-height: 0.89;
+        letter-spacing: 0.04em;
+    }
+}
+
+.anchor-btns {
+    display: flex;
+}
+
+.anchor-btns__item:first-child {
+    margin-right: 8px;
+
+    @include mq(desktop) {
+        margin-right: 12px;
+    }
+}
+
+.anchor-btns__link {
+    display: block;
+    padding: 6px 12px;
+    border-radius: 20px;
+    text-align: center;
+    color: $white-color;
+    background-color: $title-text-color;
+
+    &:hover,
+    :focus {
+        color: $title-text-color;
+        background-color: $white-color;
+    }
+
+    @include mq(desktop) {
+        padding: 11px 22px;
+    }
+}
+
+.anchor-btns__link--white-bgc {
+    color: $title-text-color;
+    background-color: $white-color;
+
+    &:hover,
+    :focus {
+        color: $white-color;
+        background-color: $title-text-color;
+    }
+}
+
+.achievements {
+    position: relative;
+    margin-right: 20px;
+    text-align: right;
+    color: $white-color;
+
+    @include mq(mobile) {
+        display: none;
+    }
+}
+
+.achievements__item:first-child {
+    margin-bottom: 16px;
+
+    @include mq(desktop) {
+        margin-bottom: 19px;
+    }
+}
+
+.big-number {
+    position: relative;
+    z-index: 1;
+    font-family: 'Titan One';
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $title-text-color;
+
+    @include mq(desktop) {
+        font-size: 46px;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: -2px;
+        right: -8px;
+        z-index: -1;
+
+
+        display: block;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background-color: $white-color;
+
+        @include mq(desktop) {
+            top: -5px;
+            right: -15px;
+            width: 30px;
+            height: 30px;
+        }
+    }
+}
+
+.hero-about {
+    margin-left: 150px;
+    max-width: 115px;
+    color: $white-color;
+
+    @include mq(desktop) {
+        margin-left: 200px;
+        max-width: 200px;
+    }
+}
+
+.hero-about__text {
+    margin-bottom: 20px;
+    line-height: 1.5;
+
+    @include mq(desktop) {
+        line-height: 1.4;
+    }
+
+    @include mq(mobile) {
+        display: none;
+    }
+}
+
+.more-about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    border: none;
+
+    @include mq(mobile) {
+        display: none;
+    }
+}
+
+.arrow {
+    width: 12px;
+    height: 12px;
+    fill: $title-text-color;
+}
+
+.jug-of-milk {
+    position: absolute;
+    bottom: -40px;
+    left: 0px;
+
+    @include mq(mobile) {
+        display: none;
+    }
+
+    @include mq(desktop) {
+        bottom: -15px;
+        left: 0;
+    }
+}
+
+.ice-cream-photo {
+    position: absolute;
+    bottom: -158px;
+    left: 35%;
+
+    @include mq(mobile) {
+        z-index: 0;
+    }
+
+    @include mq(tablet) {
+        bottom: -56px;
+        left: 320px;
+    }
+
+    @include mq(desktop) {
+        bottom: -85px;
+        left: 600px;
+    }
+}
+
+.girl-photo {
+    position: absolute;
+    bottom: -56px;
+    right: 0;
+
+    @include mq(mobile) {
+        display: none;
+    }
+
+    @include mq(desktop) {
+        bottom: -85px;
+        right: 0;
+    }
+}
