--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
           <li class="footer__icons-item socials__item">
             <a
               class="footer__icons-link socials__link"
-              href=""
+              href="https://github.com/"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Github icon"
@@ -23,7 +23,7 @@
           <li class="footer__icons-item socials__item">
             <a
               class="footer__icons-link socials__link"
-              href=""
+              href="https://telegram.org/"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Telegram icon"
@@ -36,7 +36,7 @@
           <li class="footer__icons-item socials__item">
             <a
               class="footer__icons-link socials__link"
-              href=""
+              href="https://www.facebook.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Facebook icon"
