--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,6 +1,6 @@
 <section class="customer">
-  <h2 class="customer__title visually-hidden">Customer reviews</h2>
-  <div class="container container__customer__review wrapper">
+  <h2 class="customer__text__comment visually-hidden">Customer reviews</h2>
+  <div class="container customer__review wrapper">
     <input type="radio" name="point" id="slide1" checked />
     <input type="radio" name="point" id="slide2" />
     <input type="radio" name="point" id="slide3" />
@@ -18,7 +18,7 @@
           height="85"
         />
         <div class="customer__container">
-          <p class="customer__title">
+          <p class="customer__text__comment">
             Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
             Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
             ipsum primis in nibh vel risus.
@@ -65,7 +65,7 @@
           height="85"
         />
         <div class="customer__container">
-          <p class="customer__title">
+          <p class="customer__text__comment">
             Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
             Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
             ipsum primis in nibh vel risus.
@@ -111,7 +111,7 @@
           height="85"
         />
         <div class="customer__container">
-          <p class="customer__title">
+          <p class="customer__text__comment">
             Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
             Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
             ipsum primis in nibh vel risus.
@@ -160,7 +160,7 @@
               height="85"
             />
             <div class="customer__container">
-              <p class="customer__title">
+              <p class="customer__text__comment">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                 Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
                 Lorem ipsum primis in nibh vel risus.
@@ -205,7 +205,7 @@
               height="85"
             />
             <div class="customer__container">
-              <p class="customer__title">
+              <p class="customer__text__comment">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                 Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
                 Lorem ipsum primis in nibh vel risus.
@@ -249,7 +249,7 @@
               height="85"
             />
             <div class="customer__container">
-              <p class="customer__title">
+              <p class="customer__text__comment">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                 Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
                 Lorem ipsum primis in nibh vel risus.
