--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -3,7 +3,7 @@
   padding-bottom: 120px;
 }
 
-.container__customer__review {
+.customer__review {
   margin-left: auto;
   margin-right: auto;
 }
@@ -34,7 +34,7 @@
 .customer__item {
   text-align: center;
 }
-.customer__title {
+.customer__text__comment {
   font-family: $primary-font;
   font-weight: 500;
   font-size: 16px;
@@ -61,7 +61,7 @@
     line-height: 1.81;
   }
 }
-.customer__title::before {
+.customer__text__comment::before {
   position: absolute;
   content: '';
   background-image: url(../images/icons/“.svg);
@@ -133,7 +133,6 @@
 
 .slider {
   height: inherit;
-  overflow: hidden;
   position: relative;
   width: inherit;
 }
@@ -188,7 +187,6 @@
   display: none;
 }
 
-.wrapper label:hover,
 #slide1:checked ~ .controls label:nth-of-type(1),
 #slide2:checked ~ .controls label:nth-of-type(2),
 #slide3:checked ~ .controls label:nth-of-type(3) {
