fixs/ кнопки-ссылки на карту

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -285,7 +285,7 @@
     padding-right:16px;
 }
 
-.location__icon {
+.contacts-section__button__location__icon {
     display: block;
     position: absolute;
     left:140px;
@@ -302,7 +302,7 @@
         }
 } 
 
-.franchise__icon {
+.contacts-section__button__franchise__icon {
     display: block;
     left:125px;
     position: absolute;
