--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
-<section class="about">
+<section class="about" id="about">
   <div class="about__container container">
     <p class="about__subtitle">TRADITION AND LOVE</p>
-    <h2 class="about__title">HOW IT'S MADE?</h2>
+    <h2 class="about__title" id="it's_made">HOW IT'S MADE?</h2>
     <div class="about__section">
       <img
         class="about__image"
@@ -23,9 +23,12 @@
             Curabitur lacinia enim at ex blandit, vel pellentesque odio
             elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
             euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
-            massa nibh, tincidunt.<br /><br />Aliquam erat volutpat. Aenean
-            accumsan.
+            massa nibh, tincidunt.
           </p>
+          <p class=".form__subtitle--third">
+            Aliquam erat volutpat. Aenean accumsan.
+          </p>
+
           <button
             class="about__btn"
             type="button"
@@ -68,16 +71,24 @@
     </button>
     <form class="form">
       <span class="form__text">A lot of interesting things about as</span>
-      <span class="form__subtitle"
-        >Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-        cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-        justo fringilla.<br />
-        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-        Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-        suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-        tincidunt.<br />Aliquam erat volutpat. Aenean accumsan.</span
-      >
-      <img
+      <div class="form__subtitle">
+        <p class="form__subtitle--first">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+          justo fringilla.
+        </p>
+        <br />
+        <p class="form__subtitle--second">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+          tincidunt.
+        </p>
+        <br />
+        <p class="form__subtitle--third">
+          Aliquam erat volutpat. Aenean accumsan.
+        </p>
+      </div>
     </form>
   </div>
 </div>
