--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,19 +1,202 @@
-.header-hero__section {
-    max-width: 1200px;
-    height: 664px;
+.header-hero {
     background-color: #FFB8CA;
-} 
-
-.header-hero__logo {}
-
-.header-hero__icon {}
-
-.header-hero__menu {}
-
-.header-hero__list {
+}
+.header-hero__section {
+    position: relative;
     display: flex;
+    background-color: #FFB8CA;
+    @media screen and (min-width: 768px) {
+        width: 704px;
+        padding-top: 32px;
+    }
+
+    
+
+    @media screen and (min-width: 1200px){
+    padding-top: 0px;
+    width: 100%;
+    }
 }
 
-.header-hero__item {}
+.header-hero__logo {
+    padding-top: 8px;
+    @media screen and (min-width: 768px) {
+    padding-top: 0px;   
+    }
+    @media screen and (min-width: 1200px) {
+    padding-top: 37px;
+    }
+}
 
-.header-hero__btn {}
+.header-hero__btn-menu {
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    top: 27px;
+    right: 0px;
+    background-color: transparent;
+    border: none;
+    @media screen and (min-width: 768px)
+    and (max-width: 1199px) {
+    top: 46px;
+    right: 184px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+
+}
+
+.header-hero__btn-menu .header-hero__icon-close {
+    display: none;
+}
+
+.header-hero__btn-menu.is-open .header-hero__icon-close {
+    display: block;
+}
+
+.header-hero__btn-menu.is-open .header-hero__icon-burger {
+    display: none;
+}
+
+
+.header-hero__menu {
+    display: none;
+        
+    &.is-open {
+            display: block; 
+        }
+
+    @media screen and (max-width: 767px) {
+        
+        position: absolute;
+        list-style: none;
+        text-align: left;
+        top: 0px;
+        left: 0px;
+        width: 250px;
+        height: 502px;
+        padding-left: 20px;
+        padding-top: 60px;
+        background-color: #E17992;
+        z-index: 1;
+        
+        
+        
+        
+    }
+
+    @media screen and (min-width: 768px)
+    and (max-width: 1199px) {
+        
+        position: absolute;
+        list-style: none;
+        text-align: left;
+        padding-left: 20px;
+        padding-top: 54px;
+        width: 254px;
+        height: 1020px;
+        background-color: #E17992;
+        z-index: 1;
+        
+    }
+    
+    @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: 128px;
+    margin-bottom: 0px;
+    
+    }
+
+}
+
+.header-hero__list {
+    text-decoration: none;
+    
+    @media screen and (max-width: 1199px) {
+    & .header-hero__item + .header-hero__item {
+            margin-top: 23px;
+        }
+     
+    }
+
+    @media screen and (min-width: 1200px) {
+    display: flex;
+    padding-top: 52px;
+
+    & .header-hero__item + .header-hero__item {
+        margin-left: 35px;
+    }
+}
+}
+
+.header-hero__link {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.312;
+    color: $white-color;
+    text-decoration: none;
+    display: block;
+
+}
+
+.header-hero__link--red {
+    color: $title-text-color;
+}
+
+.header-hero__btn {
+    
+    height: 44px;
+    font-family: $primary-font;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.312;
+    color: $title-text-color;
+    background-color: $white-color;
+    padding: 0px;
+    border: none;
+    border-radius: 22px;
+    
+    fill: $title-text-color;
+
+    @media screen and (max-width: 767px) {
+        width: 209px;
+        margin-bottom: 32px;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 186px;
+        margin-left: 14px;
+        margin-bottom: 33px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 159px;
+        margin-top: 40px;
+        margin-left: 141px;
+    }
+
+}
+
+.btn-mobail {
+@media screen and (min-width: 1200px) {
+    display: none;
+}
+}
+
+.btn-desctop {
+    @media screen and (max-width: 767px) {
+        display: none;
+    }
+    @media screen and (min-width: 768px)
+    and (max-width: 1199px) {
+        margin-left: 345px;
+    }
+}
+
+.header-hero__btn-svg {
+    fill: $title-text-color;
+}
+
+
