--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -115,6 +115,9 @@
 }
 .gallery__img {
   width: 100%;
+  border-radius: 20px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms ease-in-out;
 
   &--top {
