--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -116,9 +116,7 @@
 .gallery__img {
   width: 100%;
   border-radius: 20px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, box-shadow 250ms ease-in-out;
 
   &--top {
     margin-bottom: 1vw;
@@ -136,6 +134,9 @@
 
   &:hover,
   &:focus {
+    // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    //   0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 30px rgb(212 20 67 / 10%);
     transform: scale(1.25);
   }
 }
