edit padding contact

--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -1,6 +1,13 @@
 .customer {
   position: relative;
-  padding-bottom: 120px;
+
+  padding-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 80px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 120px;
+  }
 }
 
 .customer__review {
