--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -37,7 +37,7 @@
                         do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                     <button class="btn products-list__btn" type="button" aria-label="description" data-menu-button>
                         <svg class="products-list__icon-arrow" width="15" height="15">
-                            <use href="./images/icons/arrow.svg#arrow-right"></use>
+                            <use href="./images/icons/arrow.svg"></use>
                             <!-- <use href="./images/icon/sprite.svg#modal-btn"></use> -->
                         </svg>
                         <!-- <svg class="products-list__icon-cross" width="15" height="15">
