--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -44,6 +44,7 @@
     }
 
     @media screen and (min-width: 1200px) {
+        margin-bottom: 60px;
         padding-top: 0px;
         width: 100%;
     }
